--- a/style.css
+++ b/style.css
@@ -339,6 +339,10 @@ input[type=checkbox]:checked ~ label span:nth-child(3) {
  display: none;
 }
 
+.phone-img {
+  width: auto;
+  height: 600px;
+}
 
 /* Style the content */
 article {
@@ -488,6 +492,11 @@ Media Queries
 
  .right-one {
    margin-right: 12%;
+ }
+
+ .phone-img {
+  width: 200px;
+  height: auto;
  }
 
 }
